// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="emotion-0"
  id="default"
>
  <div
    class="markdown-body"
  />
</div>
`;

exports[`Render properties.content = table - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.content = table"
>
  <div
    class="markdown-body"
  >
    <h3>
      Table
    </h3>
    <table>
      <thead>
        <tr>
          <th
            style="text-align: right;"
          >
            A
          </th>
          <th
            style="text-align: center;"
          >
            B
          </th>
          <th
            style="text-align: left;"
          >
            C
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="text-align: right;"
          >
            one
          </td>
          <td
            style="text-align: center;"
          >
            two
          </td>
          <td
            style="text-align: left;"
          >
            three
          </td>
        </tr>
        <tr>
          <td
            style="text-align: right;"
          >
            123
          </td>
          <td
            style="text-align: center;"
          >
            345
          </td>
          <td
            style="text-align: left;"
          >
            34892
          </td>
        </tr>
        <tr>
          <td
            style="text-align: right;"
          >
            true
          </td>
          <td
            style="text-align: center;"
          >
            false
          </td>
          <td
            style="text-align: left;"
          >
            none
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.content - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.content"
>
  <div
    class="markdown-body"
  >
    <h1>
      One Heading
    </h1>
    <p>
      A paragraph with 
      <em>
        emphasis
      </em>
       and 
      <strong>
        strong importance
      </strong>
      .
    </p>
    <blockquote>
      <p>
        A block quote with 
        <del>
          strikethrough
        </del>
         and a URL: 
        <a
          href="https://reactjs.org"
        >
          https://reactjs.org
        </a>
        .
      </p>
    </blockquote>
    <h4>
      Link
    </h4>
    <p>
      <a
        href="https://lowdefy.com"
      >
        A link to Lowdefy
      </a>
    </p>
    <h1>
      Two
    </h1>
    <ul>
      <li>
        Lists
      </li>
      <li>
        <input
          readonly=""
          type="checkbox"
        />
        todo
      </li>
      <li>
        <input
          checked=""
          readonly=""
          type="checkbox"
        />
        done
      </li>
    </ul>
    <p>
      A table:
    </p>
    <table>
      <thead>
        <tr>
          <th>
            a
          </th>
          <th>
            b
          </th>
        </tr>
      </thead>
    </table>
  </div>
</div>
`;

exports[`Render properties.content DangerousHtml - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.content DangerousHtml"
>
  <div
    class="markdown-body"
  >
    <h3>
      Link
    </h3>
    <p>
      <span>
        <a
          href="https://lowdefy.com"
        />
      </span>
      Lowdefy link
      <span />
    </p>
    <p>
      <span>
        <font
          size="+10"
        />
      </span>
      Description
      <span />
    </p>
    <h3>
      Bad HTML
    </h3>
    <div>
      <div>
        
  
        <a>
          delta
        </a>
        
  
        <img
          src="x"
        />
      </div>
    </div>
    <div>
        
      <math>
        
    
        <mi />
        
  
      </math>
      

    </div>
  </div>
</div>
`;

exports[`Render properties.content with code - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.content with code"
>
  <div
    class="markdown-body"
  >
    <h3>
      Code
    </h3>
    <p>
      Default
    </p>
    <pre>
      <code>
          &lt;a href="https://lowdefy.com"&gt;Default style&lt;/a&gt;
      </code>
    </pre>
    <p>
      Html
    </p>
    <pre>
      <code
        class="language-html"
      >
          &lt;a href=""&gt;html style&lt;/a&gt;
  
      </code>
    </pre>
    <p>
      Json
    </p>
    <pre>
      <code
        class="language-json"
      >
          {
    "obj": "one",
    "list": [
      1,
      2
    ]
  }
      </code>
    </pre>
    <p>
      Bad HTML
    </p>
    <pre>
      <code
        class="language-html"
      >
        &lt;div&gt;
  &lt;a&gt;delta&lt;/a&gt;
  &lt;img src="x"&gt;
  
  &lt;math&gt;
    &lt;mi&gt;&lt;/mi&gt;
  &lt;/math&gt;
&lt;/div&gt;

      </code>
    </pre>
  </div>
</div>
`;

exports[`Render properties.html-DOMPurifyOptions.ADD_TAGS-iframe - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.html-DOMPurifyOptions.ADD_TAGS-iframe"
>
  <div
    class="markdown-body"
  >
    <h2>
      With iframe ADD_TAGS:
    </h2>
    <span>
      <iframe
        height="315"
        src="https://www.youtube.com/embed/7N7GWdlQJlU"
        width="560"
      />
    </span>
  </div>
</div>
`;

exports[`Render properties.html-iframe - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.html-iframe"
>
  <div
    class="markdown-body"
  >
    <p>
      No additional ADD_TAGS:
    </p>
  </div>
</div>
`;

exports[`Render properties.style and headings - value[0] 1`] = `
.emotion-0 {
  border: 1px solid blue;
}

<div
  class="emotion-0"
  id="properties.style and headings"
>
  <div
    class="markdown-body"
  >
    <h1>
      One
    </h1>
    <h2>
      Two
    </h2>
    <h3>
      Three
    </h3>
    <h4>
      Four
    </h4>
    <h5>
      Five
    </h5>
    <h6>
      Six
    </h6>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content = table 1`] = `true`;

exports[`Test Schema properties.content = table 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.content DangerousHtml 1`] = `true`;

exports[`Test Schema properties.content DangerousHtml 2`] = `null`;

exports[`Test Schema properties.content with code 1`] = `true`;

exports[`Test Schema properties.content with code 2`] = `null`;

exports[`Test Schema properties.html-DOMPurifyOptions.ADD_TAGS-iframe 1`] = `true`;

exports[`Test Schema properties.html-DOMPurifyOptions.ADD_TAGS-iframe 2`] = `null`;

exports[`Test Schema properties.html-iframe 1`] = `true`;

exports[`Test Schema properties.html-iframe 2`] = `null`;

exports[`Test Schema properties.style and headings 1`] = `true`;

exports[`Test Schema properties.style and headings 2`] = `null`;
